k8s-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pooja-invitation
  labels:
    name: pooja-invitation
    purpose: event-invitation
