k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pooja-invitation-ingress
  namespace: pooja-invitation
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: pooja.shrinidhi.space
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pooja-invitation-service
            port:
              number: 80
